--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 nav {
-    background-color: grey;
+    background-color:rgb(59, 55, 55);
     height: 90px;
     text-align: center;
+    line-height: 60px;
+    margin-bottom: 15px;
 }
 #logo {
     background-color: black;
@@ -11,9 +13,9 @@ nav {
     float: left;
     margin-top: 10px;
     margin-left: 35px;
+   
 }
 .navitem {
-    display:inline-block;
     color: white;
     width: 200px;
     height: 70px;
@@ -22,11 +24,6 @@ nav {
     margin-left: 50px;
     float: left;
 }
-section {
-    height: 450px;
-    width: 900px;
-    background-color:black; 
-    margin:auto;
-    margin-top: 30px;
-
+img {
+    margin: 15px;
 }
