--- a/style.css
+++ b/style.css
@@ -12,18 +12,21 @@ nav {
     height: 70px;
     float: left;
     margin-top: 10px;
-    margin-left: 35px;
+    margin-left: 265px;
    
 }
 .navitem {
     color: white;
-    width: 200px;
+    width:100px;
     height: 70px;
-    background-color: darkgrey;
+    /* background-color: darkgrey; */
     margin-top: 10px;
     margin-left: 50px;
     float: left;
 }
 img {
     margin: 15px;
+}
+section {
+    margin-left: 250px ;
 }
